# calibrie

./: .gitignore  README.md  calibry.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml
calibrie/: __init__.py  calibriegui.py  colinearization.py  cutoff.py  fcs_utils.py  fileloader.py  gating.py  linearcompensation.py  loadcontrols.py  mefbeadstransform.py  mefcalibration.py  metrics.py  nonlinearunmixing.py  pandasexport.py  pipeline.py  plots.py  proteinmapping.py  utils.py
calibrie/config/beads/fortessa/: spherotech_urcp-100-2H.yaml
calibrie/gating_v2/: __init__.py  gating.py
calibrie/gating_v2/ui/: package.json  tsconfig.json
calibrie/gui/: core.py  diagnostics.py  main.py  pipeline_manager.py  task_view.py
calibrie/scripts/: __init__.py  gating_ui.py  run_pipeline.py
calibrie/tests/: package.json  playwright.config.ts
calibrie/tests/e2e/: density-visibility.spec.ts
calibry/: __back_calibry.py  __init__.py  beads.py  beadsbase.py  calibry.py  calibrygui.py  colinearization.py  cutoff.py  defaults.py  diagnostics.py  gating.py  linearcompensation.py  loadcontrols.py  mefbeadscalibration.py  mefbeadstransform.py  mefcalibration.py  nonlinearunmixing.py  pandasexport.py  pipeline.py  plots.py  proteinmapping.py  utils.py
calibry/scripts/: gating_ui.py  run_pipeline.py
docs/: SUMMARY.md  getting_started.md  index.md  linearcomp.md  nonlinearcomp.md  pipeline.md
docs/concepts/: architecture.md  calibration.md  colinearization.md  compensation.md  index.md  mapping.md
docs/reference/: colinearization.md  cutoff.md  gating.md  index.md  linearcompensation.md  loadcontrols.md  mefbeadstransform.md  mefcalibration.md  pandasexport.md  pipeline.md  proteinmapping.md  utils.md
docs/stylesheets/: extra.css
docs/usage/: command_line.md  index.md  python_api.md  yaml_config.md
example/: cytoflow_xp.py
example/data/: OA_1_ebfp_002.fcs  OA_2_eyfp_003.fcs  OA_3_mkate_004.fcs  OA_4_double_mkate_006.fcs  OA_5_double_ebfp_007.fcs  OA_6_all_colors_008.fcs  OA_beads_005.fcs  OA_unstained_001.fcs
(+3 files in other folders)
