[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibrie"
version = "0.1.0a"
description = "A set of tools and utils for fluorescence data calibration."
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
readme = "README.md"
dependencies = [
	"pydantic",
	"dearpygui",
	"shapely",
	"numpy",
	"pandas",
	"dracon",
	"matplotlib",
	"flowio",
	"ott-jax",
	"optax",
	"jax",
	"tqdm",
	"scipy",
	"xdialog",
	"rich",
	"joblib",
]

[project.scripts]
calibrie-gating = "calibrie.scripts.gating_ui:main"
calibrie-run = "calibrie.scripts.run_pipeline:main"
