[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "calibrie"
version = "0.1.0a"
description = "A set of tools and utils for fluorescence data calibration."
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
	"pydantic",
	"dearpygui",
	"shapely",
	"numpy",
	"pandas",
	"dracon @ git+https://github.com/jdisset/dracon.git",
	"matplotlib",
	"fcsparser",
	"ott-jax",
	"optax",
	"jax",
	"tqdm",
	"scipy",
	"xdialog",
	"rich",
	"joblib",
	"json5",
]

[project.scripts]
calibrie-gating = "calibrie.scripts.gating_ui:main"
calibrie-run = "calibrie.scripts.run_pipeline:main"

